tests/negative/undeclared_assignment.c
int main(void) { missing = 1; return 0; }
